--- a/docker/backtest.yml
+++ b/docker/backtest.yml
@@ -2,8 +2,9 @@ version: '3.3'
 services:
   freqtrade-backtest:
     image: freqtradeorg/freqtrade:develop
-    command: python3 ./freqtrade/main.py -s BackTestStrategy -c config-backtest.json backtesting
+    command: python3 ./freqtrade/main.py -s BackTestStrategy -c config-backtest.json backtesting --export trades --export-filename=backtest_output.json
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ~/freqtrade/config.json:/freqtrade/config.json
       - ~/freqtrade/tradesv3.backtest.sqlite:/freqtrade/tradesv3.sqlite
+      - ~/freqtrade/backtest_output.json:/freqtrade/backtest_output.json
