--- a/docker/dryrun.yml
+++ b/docker/dryrun.yml
@@ -2,8 +2,8 @@ version: '3.3'
 services:
   freqtrade-dryrun:
     image: freqtradeorg/freqtrade:develop
-    command: python3 ./freqtrade/main.py -s DryRunStrategy -c config-dryrun.json --db-url sqlite:///tradesv3.dryrun.sqlite
+    command: python3 ./freqtrade/main.py -s ../config/DryRunStrategy -c ../config/config-dryrun.json --db-url sqlite:///tradesv3.dryrun.sqlite
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ~/freqtrade/config.json:/freqtrade/config.json
+      - ~/freqtrade/config/dryrun-config.json:/freqtrade/config.json
       - ~/freqtrade/tradesv3.dryrun.sqlite:/freqtrade/tradesv3.sqlite
